@@ -91,7 +91,7 @@
          <configuration>
            <transformers>
              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-               <mainClass>teProgrammaticTestRunnernner</mainClass> <!-- Use your full class path -->
+               <mainClass>tests.TestSuiteRunner</mainClass> <!-- Use your full class path -->
              </transformer>
            </transformers>
          </configuration>
@@ -99,22 +99,6 @@
      </executions>
 </plugin>
       
-<plugin>
- <groupId>org.apache.maven.plugins</groupId>
- <artifactId>maven-compiler-plugin</artifactId>
- <version>3.13.0</version>
- <configuration>
-   <fork>true</fork>
-   <compilerArgs>
-     <arg>--add-exports</arg>
-     <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-     <arg>--add-opens</arg>
-     <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-   </compilerArgs>
-   <source>17</source>   <!-- Or your actual JDK version -->
-   <target>17</target>
- </configuration>
-</plugin>
 <plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-surefire-plugin</artifactId>
